photo-grid.html: v2, was able to fix the grid so there are no more gaps

--- a/galery.css
+++ b/galery.css
@@ -1,3 +1,11 @@
 body {
 	padding: 70px;
 }
+
+.my-class {
+    background: #ffffff;
+}
+
+.spaces {
+	padding: 70px;
+}
